[gd_scene load_steps=2 format=3 uid="uid://b0skpo0q0gxdn"]

[ext_resource type="Script" path="res://Scenes/screen_left.gd" id="1_4yvj6"]

[node name="ScreenLeft" type="VBoxContainer"]
offset_right = 1420.0
offset_bottom = 1092.0
size_flags_horizontal = 3
script = ExtResource("1_4yvj6")

[node name="TopHBox" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2

[node name="StatLabels" type="Control" parent="TopHBox"]
layout_mode = 2

[node name="FoodLabel" type="Label" parent="TopHBox/StatLabels"]
layout_mode = 0
offset_left = 10.0
offset_top = 53.0
offset_right = 73.0
offset_bottom = 76.0
text = "Food: 0"

[node name="FoodTimer" type="Timer" parent="TopHBox/StatLabels/FoodLabel"]
wait_time = 3.0
autostart = true

[node name="WaterLabel" type="Label" parent="TopHBox/StatLabels"]
layout_mode = 0
offset_left = 10.0
offset_top = 84.0
offset_right = 75.0
offset_bottom = 107.0
text = "Water: 0"

[node name="WaterTimer" type="Timer" parent="TopHBox/StatLabels/WaterLabel"]
wait_time = 3.0
autostart = true

[node name="WoodLabel" type="Label" parent="TopHBox/StatLabels"]
layout_mode = 0
offset_left = 10.0
offset_top = 17.0
offset_right = 73.0
offset_bottom = 40.0
text = "Wood: 0"

[node name="MidHBox" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 650)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginBox" type="ColorRect" parent="MidHBox"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="MidHBox"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="FoodButton" type="Button" parent="MidHBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Get Food"

[node name="Label" type="Label" parent="MidHBox/VBoxContainer/FoodButton"]
layout_mode = 0
offset_left = 204.0
offset_top = 1.0
offset_right = 244.0
offset_bottom = 24.0
text = "0"

[node name="FoodButtonTimer" type="Timer" parent="MidHBox/VBoxContainer/FoodButton/Label"]
wait_time = 10.0
one_shot = true

[node name="WaterButton" type="Button" parent="MidHBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Get Water"

[node name="ChopButton" type="Button" parent="MidHBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Chop"

[node name="BotHBox" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2

[node name="TextLog" type="Label" parent="BotHBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Scrolling log..............................................................................--------------------------------.......
next line
.....
......
...
You get killed \"prestige\" after each act and start from the begining
get permanant bonus and points in to a skill tree
.....................................................................................................
Have levelups, with skills like talk to ants, talk to other animals so they
can help"

[node name="LevelVBox" type="VBoxContainer" parent="BotHBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="LVLLabel" type="Label" parent="BotHBox/LevelVBox"]
layout_mode = 2
text = "Level 4"
horizontal_alignment = 1

[node name="XPBar" type="ColorRect" parent="BotHBox/LevelVBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(0.529412, 0.286275, 0.556863, 1)

[node name="ColorRect3" type="ColorRect" parent="BotHBox/LevelVBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(0.529412, 0.286275, 0.556863, 0)

[connection signal="timeout" from="TopHBox/StatLabels/FoodLabel/FoodTimer" to="." method="_on_food_timer_timeout"]
[connection signal="timeout" from="TopHBox/StatLabels/WaterLabel/WaterTimer" to="." method="_on_water_timer_timeout"]
[connection signal="button_down" from="MidHBox/VBoxContainer/FoodButton" to="." method="_on_food_button_button_down"]
[connection signal="timeout" from="MidHBox/VBoxContainer/FoodButton/Label/FoodButtonTimer" to="." method="_on_food_button_timer_timeout"]
[connection signal="button_down" from="MidHBox/VBoxContainer/WaterButton" to="." method="_on_water_button_button_down"]
[connection signal="button_down" from="MidHBox/VBoxContainer/ChopButton" to="." method="_on_chop_button_button_down"]
